# nnsplit

./: Cargo.toml  release.sh  update_version.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
bindings/javascript/: package.json
bindings/javascript/dev_server/: package-lock.json  package.json
bindings/python/: Cargo.build.toml  Cargo.toml  Makefile  dev_requirements.txt  pyproject.toml
nnsplit/: Cargo.toml
train/: requirements.txt
website/: package-lock.json  package.json
