[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "nnsplit"
description = "A tool to split text using a neural network. For sentence boundary detection, compound splitting and more."
readme = "README.md"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
license = "MIT"
requires-python = ">=3.8"
dependencies = ["onnxruntime==1.12.0", "tqdm>=4"]